add last comments to HW05.ipynb

--- a/homeworks/HW05/HW05.ipynb
+++ b/homeworks/HW05/HW05.ipynb
@@ -2792,13 +2792,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "bb3c71c0-4881-4086-9af2-470c347fc4fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Логистическая регрессия значительно превосходит бейзлайн-модель по всем используемым метрикам.\n",
     "# Рост ROC-AUC с 0.5 до ~0.86 показывает, что модель эффективно ранжирует клиентов по вероятности дефолта, в отличие от DummyClassifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd03077-79ea-419d-8605-347262b4783f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Бейзлайн (DummyClassifier) демонстрирует низкие метрики, accuracy около 0.589 и ROC-AUC равен 0.5, что соответствует случайному угадыванию класса. Логистическая регрессия показывает существенный прирост: accuracy выросла до 0.793, а ROC-AUC до 0.8647, что подтверждает способность модели\n",
+    "# различать положительные и отрицательные примеры. При изменении регуляризации C видно, что небольшие значения (C=0.01, 0.1) дают чуть более высокую точность на валидации, а большие значения (C=1, 10) приводят к небольшой просадке accuracy, но при этом ROC-AUC немного растёт. Выбор C=10\n",
+    "# обеспечивает наибольший ROC-AUC (0.864724), сохраняя стабильную точность, что делает модель более чувствительной к разделению классов. В целом, логистическая регрессия значительно превосходит бейзлайн по качеству и подходит для этой задачи. Модель интерпретируемая и при оптимальном C даёт\n",
+    "# хороший баланс между точностью и способностью различать классы. Можно сделать вывод, что для практического применения лучше использовать LogisticRegression с C=10."
    ]
   }
  ],
