--- a/homeworks/HW06/HW06.ipynb
+++ b/homeworks/HW06/HW06.ipynb
@@ -2636,8 +2636,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "459709da-3bc2-455f-b2a8-a6634a91461b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9273201207664484, 0.9289325322093683, 0.9287328490718322, 0.9293474426807761, 0.9288237228350223]\n",
+      "Средний ROC-AUC: 0.9286313335126894\n"
+     ]
+    }
+   ],
+   "source": [
+    "auc_scores = []\n",
+    "\n",
+    "for seed in [0, 1, 42, 99, 123]:\n",
+    "    rf = RandomForestClassifier(\n",
+    "        n_estimators=400,\n",
+    "        max_features='sqrt',\n",
+    "        min_samples_leaf=1,\n",
+    "        max_depth=None,\n",
+    "        random_state=seed\n",
+    "    )\n",
+    "    rf.fit(X_train, y_train)\n",
+    "    y_pred_proba = rf.predict_proba(X_test)[:, 1]\n",
+    "    auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "    auc_scores.append(auc)\n",
+    "\n",
+    "print(auc_scores)\n",
+    "print(\"Средний ROC-AUC:\", sum(auc_scores)/len(auc_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957b3762-6ef6-4ac4-86b6-b4b6e6b8de40",
    "metadata": {},
    "outputs": [],
    "source": []
